--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Mentor Interview Platform</title>
+    <title>CrackJobs | Mock Interviews for you to ace your next interview</title>
 
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
