pgscreen and profile fixes

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>CrackJobs | Mock Interviews for you to ace your next interview</title>
+
+    <!-- Basic SEO metas without interfering -->
+    <meta name="description" content="Practice anonymous mock interviews with expert mentors across Product Management, Data Analytics, Data Science, HR, and Software Engineering. Get structured feedback and ace your next interview.">
   </head>
+
   <body>
     <div id="root"></div>
+
+    <!-- Minimal SEO fallback: Google sees this if JS fails/not rendered -->
+    <noscript>
+      <main style="font-family: sans-serif; max-width: 800px; margin: 40px auto; padding: 0 16px;">
+        <h1>CrackJobs – Mock Interviews with Expert Mentors</h1>
+        <p>
+          CrackJobs helps you practice for Product Manager, Data Analyst, Data Scientist,
+          Software Engineer, and HR interviews with structured, real mock interviews.
+        </p>
+        <p>
+          Our mentors provide anonymized sessions, detailed evaluations and actionable
+          feedback so you know exactly what to improve to ace your next interview.
+        </p>
+
+        <h2>Popular Pages</h2>
+        <ul>
+          <li><a href="/how-it-works">How CrackJobs Works</a></li>
+          <li><a href="/about">About Us</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </main>
+    </noscript>
   </body>
 </html>
