--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,22 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>CrackJobs | Mock Interviews for you to ace your next interview</title>
+    
+    <title>CrackJobs | Anonymous mock interviews with real professionals</title>
 
-    <!-- Basic SEO metas without interfering -->
-    <meta name="description" content="Practice anonymous mock interviews with expert mentors across Product Management, Data Analytics, Data Science, HR, and Software Engineering. Get structured feedback and ace your next interview.">
+    <meta name="description" content="Practice interview topics anonymously with fully vetted expert mentors across Product Management, Data Analytics, Data Science and HR. Get structured feedback and ace your next interview.">
+
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "CrackJobs",
+      "alternateName": "CrackJobs Platform",
+      "url": "https://crackjobs.com/"
+    }
+    </script>
   </head>
 
   <body>
@@ -16,10 +28,10 @@
     <!-- Minimal SEO fallback: Google sees this if JS fails/not rendered -->
     <noscript>
       <main style="font-family: sans-serif; max-width: 800px; margin: 40px auto; padding: 0 16px;">
-        <h1>CrackJobs – Mock Interviews with Expert Mentors</h1>
+        <h1>CrackJobs – Anonymous Mock Interviews with Expert Mentors</h1>
         <p>
           CrackJobs helps you practice for Product Manager, Data Analyst, Data Scientist,
-          Software Engineer, and HR interviews with structured, real mock interviews.
+          and HR interviews with structured, real mock interviews.
         </p>
         <p>
           Our mentors provide anonymized sessions, detailed evaluations and actionable
